fix aside z-index

--- a/style/components/_banner.scss
+++ b/style/components/_banner.scss
@@ -7,8 +7,7 @@
   video {
     right: 0;
     top: 0;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
     z-index: -10;
   }
 }
