--- a/style/components/_hamburger.scss
+++ b/style/components/_hamburger.scss
@@ -5,7 +5,7 @@
   right: 2rem;
   height: 60px;
   width: 58px; /*needs to be set to display element with fixed property*/
-  border-radius: 99px;
+  border-radius: 50%;
   background-color: whitesmoke;
   cursor: pointer;
   z-index: 99;
