--- a/style/main.css
+++ b/style/main.css
@@ -19,8 +19,7 @@
 #banner video {
   right: 0;
   top: 0;
-  min-width: 100%;
-  min-height: 100%;
+  width: 100%;
   z-index: -10;
 }
 
@@ -91,7 +90,7 @@
   right: 2rem;
   height: 60px;
   width: 58px; /*needs to be set to display element with fixed property*/
-  border-radius: 99px;
+  border-radius: 50%;
   background-color: whitesmoke;
   cursor: pointer;
   z-index: 99;
@@ -184,6 +183,7 @@
   top: 0;
   left: 0;
   bottom: 0;
+  z-index: 99;
   /*sizing*/
   min-height: 100vh;
   width: 300px;
@@ -279,6 +279,11 @@ a {
   color: #000;
   margin-left: 16px;
   padding-left: 0;
+}
+@media screen {
+  .contact-container {
+    display: block;
+  }
 }
 
 .contact-list {
