--- a/style/sections/_aside.scss
+++ b/style/sections/_aside.scss
@@ -6,6 +6,7 @@
   top: 0;
   left: 0;
   bottom: 0;
+  z-index: 99;
   /*sizing*/
   min-height: 100vh;
   width: 300px;
